--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="false">
+
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
@@ -29,6 +31,20 @@
             android:theme="@android:style/Theme.Black.NoTitleBar"
             android:label="@string/app_name" >
         </activity>
+
+        <!-- Featured activity -->
+        <activity
+            android:name=".FeaturedActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:label="@string/app_name" >
+        </activity>
+
+        <!-- Main activity -->
+        <activity
+            android:name=".ApplicationActivity"
+            android:label="@string/app_name" >
+        </activity>
+
     </application>
 
 </manifest>
